# constant_time_eq

./: .travis.yml  CHANGES  Cargo.toml  search-index.js
.github/workflows/: ci.yml
benches/: bench.rs  bench_classic.rs  bench_generic.rs
constant_time_eq/: fn.constant_time_eq.html  index.html
src/: classic.rs  dit.rs  generic.rs  hide.rs  imp.rs  imp_cg.rs  lib.rs  neon.rs  sse2.rs
src/constant_time_eq/: lib.rs.html
tests/: count_instructions.rs  count_instructions_classic.rs  count_instructions_generic.rs  exhaustive.rs
