[package]
name = "constant_time_eq"
version = "0.2.2"
edition = "2021"
authors = ["Cesar Eduardo Barros <cesarb@cesarb.eti.br>"]
description = "Compares two equal-sized byte strings in constant time."
documentation = "https://docs.rs/constant_time_eq"
repository = "https://github.com/cesarb/constant_time_eq"
readme = "README"
keywords = ["constant_time"]
categories = ["cryptography", "no-std"]
license = "CC0-1.0"
rust-version = "1.59"

[dev-dependencies]
criterion = { version = "0.3", features = ["cargo_bench_support", "html_reports"] }

[features]
default = ["const-generics"]
const-generics = []

[[bench]]
name = "bench"
harness = false
